exports[`test should render with error mesage 1`] = `
<div>
  <HelmetWrapper
    encodeSpecialCharacters={true}>
    <title>
      changePassword
    </title>
  </HelmetWrapper>
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconMenu
          size="1em" />
      </MobileHeaderIcon>
    }
    title="changePassword" />
  <form
    onSubmit={[Function]}>
    <main>
      <Styled(MobileContentWrapper)>
        <div>
          <styled.label
            htmlFor="new1">
            newPassword.label
          </styled.label>
          <Input
            focus={false}
            kind="error"
            name="new1"
            onChange={[Function]}
            placeholder="newPassword.placeholder"
            required={true}
            type="password"
            value="1234" />
          <Styled(P)
            color="error">
            lengthError
          </Styled(P)>
        </div>
        <div>
          <styled.label
            htmlFor="new2">
            newPasswordAgain.label
          </styled.label>
          <Input
            focus={false}
            kind="error"
            name="new2"
            onChange={[Function]}
            placeholder="newPasswordAgain.placeholder"
            required={true}
            type="password"
            value="12345" />
          <Styled(P)
            color="error">
            newPasswordAgain.error
          </Styled(P)>
        </div>
      </Styled(MobileContentWrapper)>
    </main>
    <MobileFixedFooter>
      <styled.div>
        <Styled(Link)
          to={[Function]}>
          <Button
            active={false}
            block={true}
            component="button"
            kind="default"
            round={false}
            size="normal"
            square={false}>
            cancel
          </Button>
        </Styled(Link)>
        <Button
          active={false}
          block={true}
          component="input"
          kind="primary"
          round={false}
          size="normal"
          square={false}
          type="submit"
          value="save" />
      </styled.div>
    </MobileFixedFooter>
  </form>
</div>
`;

exports[`test should renders <Password> correctly 1`] = `
<div>
  <HelmetWrapper
    encodeSpecialCharacters={true}>
    <title>
      changePassword
    </title>
  </HelmetWrapper>
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconMenu
          size="1em" />
      </MobileHeaderIcon>
    }
    title="changePassword" />
  <form
    onSubmit={[Function]}>
    <main>
      <Styled(MobileContentWrapper)>
        <div>
          <styled.label
            htmlFor="new1">
            newPassword.label
          </styled.label>
          <Input
            focus={false}
            kind="primary"
            name="new1"
            onChange={[Function]}
            placeholder="newPassword.placeholder"
            required={true}
            type="password"
            value="" />
        </div>
        <div>
          <styled.label
            htmlFor="new2">
            newPasswordAgain.label
          </styled.label>
          <Input
            focus={false}
            kind="primary"
            name="new2"
            onChange={[Function]}
            placeholder="newPasswordAgain.placeholder"
            required={true}
            type="password"
            value="" />
        </div>
      </Styled(MobileContentWrapper)>
    </main>
    <MobileFixedFooter>
      <styled.div>
        <Styled(Link)
          to={[Function]}>
          <Button
            active={false}
            block={true}
            component="button"
            kind="default"
            round={false}
            size="normal"
            square={false}>
            cancel
          </Button>
        </Styled(Link)>
        <Button
          active={false}
          block={true}
          component="input"
          kind="primary"
          round={false}
          size="normal"
          square={false}
          type="submit"
          value="save" />
      </styled.div>
    </MobileFixedFooter>
  </form>
</div>
`;
